2007-01-03  Paul Eggert  <eggert@cs.ucla.edu>

	* zdiff.in: Test /dev//fd/3, not /dev/fd/3, to work around a problem
	with Tru64 4.0F ksh M-11/16/88f reported by Thomas Koutcher in
	<http://lists.gnu.org/archive/html/bug-gzip/2007-01/msg00000.html>.

2006-12-30  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Version 1.3.10 released.
	* configure.ac (AC_INIT): Likewise.

	* Makefile.am (check-local): Don't assume $(srcdir) is '.'.
	(MAINTAINERCLEANFILES): Move gzip.doc.gz from here ...
	(MOSTLYCLEANFILES): ... to here.

2006-12-29  Paul Eggert  <eggert@cs.ucla.edu>

	* zless.in: Work around a bug in less 394 and earlier; it
	mishandles $%=~ in file names.  Problem reported by
	Sami Liedes in <http://bugs.debian.org/383358>.

	* doc/gzip.texi: Swap order of dircategory entries, to pacify
	Debian install-info 1.10.28.  This should fix
	<http://bugs.debian.org/404048>.

	* zgrep.in (version): Fix bug: $grep wasn't evaluated.

	* zgrep.in: Rewrite to make the option processing more
	compatible with GNU and POSIX grep.  Assume POSIX shell
	for more stuff, since we're already assuming that.
	* Makefile.am (check-local): Check zgrep -iV.

2006-12-26  Paul Eggert  <eggert@cs.ucla.edu>

	Fix Debian bug 367673 <http://bugs.debian.org/367673> plus several
	other bugs discovered in the neighborhood.
	* NEWS: gzip -q now exits with status 2 (not 1) on SIGPIPE.
	zgrep has many bugs fixed with argument handling, special characters,
	and exit status.
	* gzip.c (abort_gzip_signal): Implement gzip -q change.
	* zgrep.in: Implement zgrep change.

2006-12-23  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: Fix bug reported by Martin Mares in
	<http://bugs.debian.org/177942>.
	* gzip.c (treat_stdin): Remove NO_STDIN_FSTAT and NO_PIPE_TIMESTAMP
	stuff.  It didn't work (led to syntax errors) and was confusing.
	Report an error if stdin cannot be statted even if !list && no_time.
	Get stdin's size if it is regular.
	(treat_file): Do not report an error with setuid, setgid,