@@ -14,6 +14,7 @@ case "$0" in
   *cmp) prog=cmp ; cmp='${CMP-cmp}'  ;;
   *)    prog=diff; cmp='${DIFF-diff}';;
 esac
+cmp0=$cmp
 
 version="z$prog (gzip) @VERSION@
 Copyright (C) 2006 Free Software Foundation, Inc.
@@ -45,7 +46,8 @@ while :; do
 done
 cmp="$cmp --"
 
-for file; do
+for file
+do
   test "X$file" = X- || <"$file" || exit 2
 done
 
@@ -65,9 +67,12 @@ elif test $# -eq 2; then
 		*[-.]gz* | *[-.][zZ] | *.t[ga]z | -)
 		    if test "$1$2" = --; then
 			gzip -cdfq - | eval "$cmp" - -
-		    # The extra slash in /dev//fd works around a problem with
-		    # Tru64 4.0F ksh M-11/16/88f.
-		    elif test -r /dev//fd/3 3</dev/null; then
+		    elif
+			# Reject Solaris 8's buggy /bin/bash 2.03.
+			echo X |
+			 (echo X | eval "$cmp0" /dev/fd/3 - >/dev/null 2>&1) \
+				3<&0
+		    then
 			gzip -cdfq -- "$1" |
 			  (gzip -cdfq -- "$2" |
 			   eval "$cmp" /dev/fd/3 -) 3<&0
